trunk/Archive2/82/ca72c64fc3fac2/output
main.cpp: In function 'int main()':
main.cpp:17:35: error: 'inat' was not declared in this scope
     std::cout << std::is_function<inat>:v'n';
                                   ^
main.cpp:17:39: error: template argument 1 is invalid
     std::cout << std::is_function<inat>:v'n';
                                       ^
main.cpp:17:40: error: expected ';' before ':' token
     std::cout << std::is_function<inat>:v'n';
                                        ^
main.cpp:17:45: error: expected '}' at end of input
     std::cout << std::is_function<inat>:v'n';
                                             ^
